--- a/cardtrackr/package.json
+++ b/cardtrackr/package.json
@@ -13,6 +13,9 @@
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^2.1.0",
     "@nuxt/image": "^1.11.0",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tcgdex/sdk": "^2.7.1",
+    "gsap": "^3.13.0",
     "nuxt": "^4.1.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
